    molecule with unsaved changes (rather than simply the first
    molecule) [Herb Klei]

  o CHANGE: "Go To Blob" now goes to the front blob, no matter what
    the density level of blobs/density behind it is [JED].

  o CHANGE: Don't display the geometry distance if the molecule
    corresponding to the start or end point is not displayed [JED].

  o CHANGE: the restraints editor now uses strings
    (positive/negative/both) rather than number to represent the sign
    for chiral volumes [Andrew Leslie]

  o CHANGE: Additional representations now have an "All off" button.

  o CHANGE: Chi angles rotation now include a "reverse fragment" option.

  o CHANGE: "Add strand here" moved next to "Add Helix Here".

  o CHANGE: Convert PDB format 3.x prime atom names to star names (to 
    correspond to current Refmac dictionary). 

  o BUG-FIX: TER records are removed on addition of waters [Herb Klei].

  o BUG-FIX: Align vs PIR file improved [Bob Nolte]

  o BUG-FIX: Single HETATMs now are refined by rigid body (as waters
    are) when using Refine Zone.

  o BUG-FIX: new atoms (and waters) are added as HETATMs if
    appropriate [David Mathog].

  o BUG-FIX: TER records for water chains are no longer tested in
    water validation tests [Herb Klei].

  o BUG-FIX: NCS chain jumping now works on heterodimers [Jianghai Zhu].

  o BUG-FIX: The Chain Reordering function in Extensions has been fixed.

  o BUG-FIX: Torsion angle refinement convergence improved [JED].

  o BUG-FIX: Ramachandran Green spot no longer disappers on refinement.

  o BUG-FIX: Limit the sequence view canvas X parameters, so that we
    don't get X11 errors and crash [Felix Frolow].

  o BUG-FIX: Additional representations appear in both "eyes" in
    side-by-side mode.

  o BUG-FIX: Delete-atom spewing binary fixed [JED].

-----

Release 0.5.2 Uneno

   o BUG-FIX: Fix annoying shift-key-labels-atoms bug

Release 0.5.1 Uneno

   o FEATURE: A "Delete Molecule" button is now available in the