@@ -3056,8 +3056,7 @@ public:
 						atom_selection_container_t asc_mov,
 						PCAtom *atom_selection1, 
 						PCAtom *atom_selection2, 
-						int n_selected_atoms_1, int n_selected_atoms_2, 
-						short int move_copy_of_imol2_flag) const;
+						int n_selected_atoms_1, int n_selected_atoms_2) const;
 
    std::pair<std::string, std::string>
      get_horizontal_ssm_sequence_alignment(CSSMAlign *SSMAlign,
